chore: input checks

--- a/gulp-src.html
+++ b/gulp-src.html
@@ -5,7 +5,7 @@
         color: '#FFF',
         defaults: {
             name: {value:""},
-            globs: {value:"", required:true }
+            globs: {value:"" }
         },
         inputs:1,
         outputs:1,
