--- a/gulp-dest.html
+++ b/gulp-dest.html
@@ -5,7 +5,7 @@
         color: '#FFF',
         defaults: {
             name: {value:""},
-            path: {value:"", required:true }
+            path: {value:""}
         },
         inputs:1,
         outputs:1,
