a bit doc & rename

--- a/gulp-dest.html
+++ b/gulp-dest.html
@@ -27,8 +27,18 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="gulp dest">
+<script type="text/x-red" data-help-name="gulp dest">   
+    <h4> <strong> Description </strong> </h4> 
     <p>
-        https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpsrcglobs-options
+        It will write files at specified location (got from message or configuration). Folders that don't exist will be created.
+    </p>
+    <p>
+        You need to install <a href="http://gulpjs.com/">gulp</a> to make it work.
+        Read more <a href="https://github.com/gulpjs/gulp/blob/master/docs/getting-started.md">here</a>
+    </p>
+    <p>
+        Please, refer to gulp documentation.
+        <br>
+        <a href="https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpdestpath-options">gulp.dest()</a>
     </p>
 </script>   
