--- a/gulp-watch.html
+++ b/gulp-watch.html
@@ -28,7 +28,17 @@
 </script>
 
 <script type="text/x-red" data-help-name="gulp watch">
+    <h4> <strong> Description </strong> </h4>
     <p>
-        https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpsrcglobs-options
+        Watch files and run flow when a file changes. 
+    </p>
+    <p>
+        You need to install <a href="http://gulpjs.com/">gulp</a> to make it work.
+        Read more <a href="https://github.com/gulpjs/gulp/blob/master/docs/getting-started.md">here</a>
+    </p>
+    <p>
+        Please, refer to gulp documentation.
+        <br>
+        <a href="https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpwatchglob--opts-tasks-or-gulpwatchglob--opts-cb">gulp.watch()</a>
     </p>
 </script>   
