--- a/gulp-src.html
+++ b/gulp-src.html
@@ -28,7 +28,17 @@
 </script>
 
 <script type="text/x-red" data-help-name="gulp src">
+    <h4> <strong> Description </strong> </h4>
     <p>
-        https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpsrcglobs-options
+        Emits files matching provided glob (by message or configuration)
+    </p>
+    <p>
+        You need to install <a href="http://gulpjs.com/">gulp</a> to make it work.
+        Read more <a href="https://github.com/gulpjs/gulp/blob/master/docs/getting-started.md">here</a>
+    </p>
+    <p>
+        Please, refer to gulp documentation.
+        <br>
+        <a href="https://github.com/gulpjs/gulp/blob/master/docs/API.md#gulpsrcglobs-options">gulp.src()</a>
     </p>
 </script>   
