--- a/gulp-pipe.html
+++ b/gulp-pipe.html
@@ -14,7 +14,8 @@
         defaults: {
             name: {value:""},
             plugin: {value:"", required:true },
-            arg1: {value:""}
+            arg1: {value:""},
+            options: {value: "{}", validate: RED.validators.json() }
         },
         inputs:1,
         outputs:1,
@@ -33,6 +34,9 @@
 </script>
 
 <script type="text/x-red" data-template-name="gulp pipe">
+    <style>
+        .form-row select, .form-row textarea{ width: 70%; }
+    </style>
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -44,6 +48,10 @@
      <div class="form-row">
         <label for="node-input-arg1"><i class="icon-tag"></i> arg1 </label>
         <input type="text" id="node-input-arg1" placeholder="arg1">
+    </div>
+    <div class="form-row">
+        <label for="node-input-options"><i class="icon-cog"></i> Options (json) </label>
+        <textarea id="node-input-options" placeholder="Options" rows="7"></textarea>
     </div>
 </script>
 
